# GAMESSTUDY

./: .gitignore  README.md
Homework0/: main.cpp
Homework1/: CMakeLists.txt  DebuggingProblem.md  main.cpp
